feat: add flip cards

--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ body {
 }
 
 .card {
-  margin-bottom: 22px;
   position: relative;
+  margin-bottom: 22px;
   width: 120px;
   height: 120px;
   background-color: rgb(170 194 218 / 80%);
@@ -52,10 +52,31 @@ body {
   cursor: pointer;
 }
 
+.card__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+.card.flip .card__inner {
+  transform: rotateY(180deg);
+}
+
+.card__font,
+.card__back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
 .card__font {
-  display: none;
-  justify-content: center;
-  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  background-image: url('../assets/images/cards/bg-cards.png');
 
   transition: 0.3s;
 }
@@ -65,11 +86,10 @@ body {
 }
 
 .card__back {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  background-repeat: no-repeat;
+  background-position: center;
   transition: 0.3s;
+  transform: rotateY(180deg);
 }
 
 .card__back {
